2007-03-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b50

 * Fix: crop_photo.php is no popup.

2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b49

 * Fix: View comments were broken when embedded.
   
   Thanks to Draccie from forums.

 * Fix: Critical typo in ebuild_capture_dates.php

 * Fix: HTML bug in templates/overall.footer.tpl.default

 * Change: Nicify in popups/edit_caption.php

 * Change: Added css for tooltip in base.css

2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b48

 Fix: Permission issue.
      Album1 from user1 with permission for user2 to create a subalbum.
      User2 is owner and in thumbsview he got the option to move this album.
      But album2 is an item of album1 ...

 Thanks to Peter Schumacher.

 * Fix: Added another missing entry in translation filelist.

2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b47

 * New: Added 3|4 Ratio for cropping

 * Change: Outsourced ratio defintion into
           includes/definitions/cropOptions.php

2007-03-08 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b46

 * Change: Unified and nicified tools/* and usage.php

 * Fix: Added missing entries in po/filelist-core

2007-03-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b45

 * Fix: Set correct chmod for captcha tempfolder.
   Thanks to Peter Schumacher.   

2007-03-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b44

 * Change: Make all popups per default 550px wide when using popup_link()

 * Change Use of accesskeys and wording in ecard form.

2007-03-06 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b43

 * New: Added functionality to rebuild capture dates.

 * Fix: Don't strip Port from Urls

 * Change: Some minore layout things.

2007-03-01 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b42

 * Fix: Moved inclusion of page header on mainpage before some javascripts
        to avoid warnings when embedded.
        
 * Fix: Created function showDebugInfo() that show the debug info box.
        Sourced it out into util.php from
        templates/overall.header.tpl.default