@@ -1,3 +1,9 @@
+2007-03-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b51
+
+ * Change: general.footer does not exist anymore.
+
+ * Fix: Use overall.footer where general.footer were used.
+
 2007-03-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b50
 
  * Fix: crop_photo.php is no popup.
